# scirocco

./: .gitignore  README.md  install.sh  pyproject.toml
docs/: heater_chamber.md
heater_chamber/: __init__.py  controller.py
klippy/: __init__.py
klippy/extras/: __init__.py  heater_chamber.py
tests/: fakes.py  test_config_proxy.py  test_heater_chamber_fan.py  test_heater_chamber_gcodes.py  test_heater_chamber_init.py  test_package_imports.py  test_tooling.py
tests/install/: conftest.py  test_detection.py  test_download.py  test_integration.py  test_link.py  test_preflight.py  test_print_guard.py  test_safe_link.py  test_skeleton.py  test_updater.py
